public/_firn/static/css/customization.css
:root {
  --sidebar-width: 280px;
  --border-col: #dfdfdf;
  --nav-bg: #fdfdfd;
  --nav-bg-inverse: #444;
  --nav-height: 54px;
}

@media (prefers-color-scheme: dark) {
  :root {
    --border-col: #555;
    --nav-bg: #303030;
    --nav-bg-inverse: #fbfbfb;
  }
}

html {
  /*For jumping to heading due to the fixed header:*/
  scroll-padding-top: calc(var(--nav-height) + 12px);
}


/* ibm-plex-mono-regular - latin */
@font-face {
  font-family: 'IBM Plex Mono';
  font-style: normal;
  font-weight: 400;
  src: local('IBM Plex Mono'), local('IBMPlexMono'),
       url('/data/fonts/ibm-plex-mono-v5-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('/data/fonts/ibm-plex-mono-v5-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}


/* Rules */


h2 {
  font-size: 1.25em;
}

.index-nav {
  height: 100vh;
  min-height: 250px;
  border-bottom: 1px solid var(--border-col);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 24px;
}

@media(max-width: 768px) {
  .index-nav {
    min-height: 30vh;
  }
}

code {
  border: 1px solid var(--border-col);
  background: var(--color-bg-secondary);

}

pre {
  padding: 1rem;
  padding-bottom: 0;
  background: #2d2d2d;
  border-radius: 2px;
}

pre code {
  display: block;
  overflow-x: auto;
  line-height: 1.8 !important;
  border: none;
  font-size: 0.85em !important;
  font-family: "IBM Plex Mono" !important;
  color: #fdfdfd;
  border: 0;
  border-radius: 0;
}

.hljs {
  padding: 0 0 1.0rem 0 !important;
}

/* Default Page */
main{
  height: calc(100vh - 54px);
  overflow: auto;
  position:relative;
}
.def-wrapper {
  width: 100%;
  display: flex;
}

.def-sidebar {
  position: sticky;
  min-width: var(--sidebar-width);
  width: var(--sidebar-width);
  flex-direction: column;
  display: flex;
  top: -54px;
  margin-top: -54px;
  overflow-y: auto;
  height: calc(100vh - 35px);
  padding: 24px;
  padding-top: 64px;
}

.def-toc {
  position: sticky;
  min-width: var(--sidebar-width);

  display: flex;
  flex-direction: column;
  top: -54px;
  width:auto;
  margin-top: -54px;
  overflow-y: auto;
  height: calc(100vh - 35px);
  padding: 24px;
  padding-top: 64px;
  font-size: 12px;
}
.def-sidebar-open ~ .def-toc{
  z-index:-1;
}

.def-content-wrap {
  max-width: 800px;
  width: 100%;
  min-height: calc(100vh - 35px - 54px);
}

.def-content {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 0px 48px 48px 48px;
  height: calc(100vh-54px);
  max-width: 48em;
  margin: auto;
}

.def-content  a {
  color: var(--color-primary);
}

.def-content p {
  text-align: justify;
}

/* Common */
.nav {
  align-items: center;
  background: var(--nav-bg);
  display: flex;
  justify-content: flex-end;
  padding: 8px 0px;
  height: var(--nav-height);
  position: sticky;
  top: 0;
  width: 100%;
  z-index: 2;
  border-bottom: 1px solid var(--border-col);
}

.nav-container {
  display: flex;
  flex: 1;
  padding: 0 32px;
  justify-content: space-between;
  align-items: center;
}

.nav-links {
  display: flex;
  align-self: center;
}

.nav-links-item {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  padding: 0 8px;
  font-size: small;
  color: var(--color-text);
}

/* Mobile styles */

@media(max-width: 758px){
  .def-toc {
    display: none;
  }
  .nav-container{
    padding-right: 8px;
    padding-left: 3%;
  }
}

@media(max-width: 1250px) {

  h1, h2 {
    font-size: 1.1rem;
  }

  h3, h4 {
    font-size: 0.9rem;
  }

  main {
    margin-top: 0px;
    position:relative;
  }

  .def-sidebar {
    position: relative;
    display: flex;
    width: 100%;
    border: none;
    border-bottom: none;
    padding: 0 16px;
    height: auto;
    margin-bottom: 32px;
    background: var(--color-bg);
    border-bottom: 2px solid var(--border-col);
    padding-bottom: 24px;
    position: fixed;
    transition: all 0.3s ease;
    left: -2000px;
    top: 52px;
    padding: 32px;
    opacity: 1 !important;
  }

  .def-sidebar-open {
    background-color: var(--nav-bg);
    left: 0;
    top: 52px;
    padding: 48px 32px;
    filter: opacity(1) !important;
    overflow: auto;
    max-height: 90vh;
    box-shadow: 5px 15px 15px rgba(0,0,0,0.5);
  }

  .def-content {
    padding: 0px 32px 48px 32px;
  }
  /* Nav Icon */
  #nav-icon {
    width: 44px;
    height: 33px;
    position: relative;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: .5s ease-in-out;
    -moz-transition: .5s ease-in-out;
    -o-transition: .5s ease-in-out;
    transition: .5s ease-in-out;
    transform: scale(0.5);
    cursor: pointer;
  }

  #nav-icon span {
    display: block;
    position: absolute;
    height: 8px;
    width: 100%;
    background: var(--nav-bg-inverse);
    border-radius: 0px;
    opacity: 1;
    left: 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: .25s ease-in-out;
    -moz-transition: .25s ease-in-out;
    -o-transition: .25s ease-in-out;
    transition: .25s ease-in-out;
  }

  #nav-icon span:nth-child(1) {
    top: 0px;
  }

  #nav-icon span:nth-child(2),#nav-icon span:nth-child(3) {
    top: 16px;
    height: 9px;
  }

  #nav-icon span:nth-child(4) {
    top: 34px;
  }

  #nav-icon.open span:nth-child(1) {
    top: 18px;
    width: 0%;
    left: 50%;
  }

  #nav-icon.open span:nth-child(2) {
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transform: rotate(45deg);
  }

  #nav-icon.open span:nth-child(3) {
    -webkit-transform: rotate(-45deg);
    -moz-transform: rotate(-45deg);
    -o-transform: rotate(-45deg);
    transform: rotate(-45deg);
  }

  #nav-icon.open span:nth-child(4) {
    top: 18px;
    width: 0%;
    left: 50%;
  }

  .nav-left {
    display: flex;
    align-items: center;
  }
}

.backlinks {
  border: 1px solid var(--border-col);
  background-color: var(--nav-bg);
  margin-top: 32px;
  padding: 16px;
  margin: 8px 0;
}

.adjacent-files {
  margin: 32px 0;
  padding: 16px 0;
  border-top: 1px solid var(--border-col);
}

.firn-file-nav-prev {
}

.firn-file-nav-next {
}

.firn-sitemap {
  font-weight: 200;
  font-size: 13px;
  padding-bottom: 32px;
}

.firn-sitemap-item--parent {
  border-left: 1px dashed var(--border-col);
}




/* Utilities ------------------------------------------------  */


.unfocused {
  filter: opacity(0.78);
  transition: filter 0.2s ease;
}

.unfocused:hover {
  filter: opacity(1);

}

.break {
  height: 0;
}

.border-top { border-top: 1px solid var(--border-col);}
.border-right { border-right: 1px solid var(--border-col);}
.border-left { border-left: 1px solid var(--border-col);}
.border-bottom { border-bottom: 1px solid var(--border-col);}



/* FOOTER */

/** General Layout **/
#footer{
  background-color: var(--color-bg);
  position:absolute;
  width:100%;
  margin:0;
}
#footer ul {
  display:flex;
  flex-flow : row wrap;
  list-style:none;
  padding:5px 10px;
  margin:0px;
  margin-left:290px;
}
@media(max-width: 1250px) {
  #footer ul{
    margin-left:0px;
  }
}
#footer ul li:nth-of-type(n+2):before {
  content:"\a0\a0-\a0\a0"
}
#footer ul details{
  display: inline-block;
}
#footer ul details > div{
  position:absolute;
  padding:10px;
  width:calc(100%);
  left:0px;
  overflow-y:hidden;
  bottom:100%;
}
#footer ul details > div table {
  table-layout:auto;
  max-width:450px;
  margin:auto;
  padding:5px;
  white-space:wrap;
}
#footer ul details > div table td{
  padding: 0px 10px;
}
#footer ul details > div table th{
  padding: 0px 10px;
  white-space: nowrap;
}

/** Content Styling **/
#footer {
  font-size:0.8em;
}
#footer ul, ul li {
}

#footer details{
  margin:0;
}

#footer details summary::-webkit-details-marker
{
  display:none;
}
#footer details > summary:first-of-type {
  list-style-type: '';
}
#footer details[open] summary{
  font-weight:600;
}
#footer details:hover > summary {
  cursor: pointer;
  color: $secondary-color;
}
#footer details > div {
  //box-shadow: -7px -5px 7px rgba(0,0,0,.2);
  background-color: var(--color-bg);
  border-top: 1px solid grey;
  max-height: min(50vh,500px);
}


#footer details[open] summary ~ * {
  box-shadow: 5px -15px 15px rgba(0,0,0,0.5);
  animation: sweep .5s ease-in-out;
}

@keyframes sweep {
  0%    {opacity: 0; bottom:30px; max-height: 0px; box-shadow:0px 0px 0px rgba(0,0,0,0)}
}

